@@ -713,6 +713,12 @@ include => demo
 ;exten => 8502,hint,Queue:markq
 ;exten => 8502,1,Queue(markq)
 ;
+
+;To subscribe to the availability of a free member in the 'markq' queue.
+;Note: '_avail' is added to the QueueName
+;exten => 8501,hint,Queue:markq_avail
+;exten => 8501,1,Queue(markq)
+
 ; Some other handy things are an extension for checking voicemail via
 ; voicemailmain
 ;
